--- a/PlaatsApp/app.json
+++ b/PlaatsApp/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "PlaatsApp",
-  "displayName": "PlaatsApp"
+  "name": "plaatsbeschrijvingen",
+  "displayName": "plaatsbeschrijvingen"
 }
