--- a/PlaatsApp/android/app/build.gradle
+++ b/PlaatsApp/android/app/build.gradle
@@ -77,9 +77,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.plaatsapp"
+    namespace "com.plaatsbeschrijvingen"
     defaultConfig {
-        applicationId "com.plaatsapp"
+        applicationId "com.plaatsbeschrijvingen"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -117,3 +117,4 @@ dependencies {
         implementation jscFlavor
     }
 }
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
