--- a/PlaatsApp/package.json
+++ b/PlaatsApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PlaatsApp",
+  "name": "plaatsbeschrijvingen",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,52 +10,57 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@d11/react-native-fast-image": "^8.11.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-camera-roll/camera-roll": "^7.6.0",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
+    "@sourcetoad/react-native-sketch-canvas": "^2.4.0",
     "axios": "^1.6.8",
     "json-order": "^1.1.3",
-    "react": "18.3.1",
-    "react-native": "0.76.1",
+    "react": "19.1.0",
+    "react-native": "0.80.2",
     "react-native-collapsible": "^1.6.2",
     "react-native-date-picker": "^5.0.13",
     "react-native-elements": "^3.4.3",
-    "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "2.15.0",
+    "react-native-gesture-handler": "^2.27.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-reanimated": "3.18.0",
+    "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.15.0",
+    "react-native-screens": "^4.13.1",
     "react-native-svg": "^15.12.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-view-shot": "^4.0.3",
-    "react-native-vision-camera": "^4.7.2"
+    "react-native-vision-camera": "^4.7.2",
+    "react-native-worklets": ">=0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.0",
-    "@react-native-community/cli-platform-android": "15.0.0",
-    "@react-native-community/cli-platform-ios": "15.0.0",
-    "@react-native/babel-preset": "0.76.1",
-    "@react-native/eslint-config": "0.76.1",
-    "@react-native/metro-config": "0.76.1",
-    "@react-native/typescript-config": "0.76.1",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
+    "@react-native-community/cli": "19.1.1",
+    "@react-native-community/cli-platform-android": "19.1.1",
+    "@react-native-community/cli-platform-ios": "19.1.1",
+    "@react-native/babel-preset": "0.80.2",
+    "@react-native/eslint-config": "0.80.2",
+    "@react-native/metro-config": "0.80.2",
+    "@react-native/typescript-config": "0.80.2",
+    "@types/d3-scale": "^4.0.9",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^19.1.0",
+    "@types/react-test-renderer": "^19.1.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
   },
   "engines": {
